--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -260,7 +260,7 @@ mat-option {
 @media screen and (max-width:678px) {
 
     .LatestNewsCards {
-        width: 393px;
+        width: 370px;
     }
 }
 PlayButton:hover span:first-child{
